[tool.poetry]
name = "se-project"
version = "0.1.0"
description = "Telegram bot for calculating expences"
authors = ["egorzuev <egorka.zuev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.10.0"
psycopg2 = "^2.9.6"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
